[package]
name = "lnpbp-invoice"
version = "0.9.0-rc.1"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "LNP/BP universal invoices library implementing LNPBP-38 standard"
repository = "https://github.com/LNP-BP/invoices"
homepage = "https://github.com/LNP-BP"
keywords = ["bitcoin", "lightning", "lnp-bp", "rgb", "invoice"]
categories = ["cryptography::cryptocurrencies"]
readme = "../README.md"
edition = "2021"

[[bin]]
name = "invoice"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "invoice"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
# Dependencies on other LNP/BP repositories
# -----------------------------------------
amplify = "3.13.0"
strict_encoding = { version = "0.9.0-rc.2", features = ["miniscript"] }
commit_verify = "0.9.0-rc.1"
bitcoin_scripts = "0.9.0-rc.1"
descriptor-wallet = { version = "0.9.0-rc.1", features = ["keygen"] }
internet2 = "0.9.0-rc.1"
lnpbp = "0.9.0-rc.1"
bp-core = "0.9.0-rc.1"
lnp-core = { version = "0.9.0-rc.1", features = ["bifrost"] }
rgb-core = { version = "0.9.0-rc.2", optional = true }
# Dependencies on core rust-bitcoin ecosystem projects
# ----------------------------------------------------
bitcoin = { version = "0.29.2", features = ["rand"] }
miniscript = { version = "9.0.0", features = ["compiler"] }
# Serialization
# -------------
base64-compat = { version = "1", optional = true } # Used by cli only
base58 = { version = "0.2", optional = true } # Used by cli only
bech32 = { version = "0.9", optional = true } # Used by cli only
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", features = ["hex"], optional = true }
serde_json = { version = "1", optional = true } # Used by cli only
serde_yaml = { version = "0.9", optional = true } # Used by cli only
toml = { version = "0.5", optional = true } # Used by cli only
clap = { version = "~3.2.23", optional = true, features = ["derive"] } # Used by cli only
# Internal data representations
# -----------------------------
url = "2.2"
chrono = "0.4.19"

[features]
default = []
all = ["serde", "rgb"]
cli = ["clap", "base64-compat", "base58", "bech32", "serde", "serde_yaml", "serde_json", "toml"]
serde = ["serde_crate", "serde_with", "amplify/serde", "descriptor-wallet/serde",
         "bp-core/serde", "lnp-core/serde", "rgb-core/serde", "internet2/serde",
         "bitcoin/serde", "miniscript/serde",
         "chrono/serde", "url/serde"]
rgb = ["rgb-core"]
