[package]
name = "lnpbp-invoice"
version = "0.9.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "LNP/BP universal invoices library implementing LNPBP-38 standard"
repository = "https://github.com/LNP-BP/invoices"
homepage = "https://github.com/LNP-BP"
keywords = ["bitcoin", "lightning", "lnp-bp", "rgb", "invoice"]
categories = ["cryptography::cryptocurrencies"]
readme = "../README.md"
edition = "2018"

[[bin]]
name = "invoice"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "invoice"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
# Dependencies on other LNP/BP repositories
# -----------------------------------------
amplify = "3.13.0"
strict_encoding = { version = "0.9.0", features = ["miniscript"] }
commit_verify = "0.9.0"
bitcoin_scripts = "0.9.0"
descriptor-wallet = { version = "0.9.0", features = ["keygen"] }
internet2 = "0.9.0"
lnpbp = "0.9.0"
bp-core = "0.9.0"
lnp-core = { version = "0.9.1", features = ["bifrost"] }
rgb-core = { version = "0.9.0", optional = true }
# Dependencies on core rust-bitcoin ecosystem projects
# ----------------------------------------------------
bitcoin = { version = "0.29.2", features = ["rand"] }
miniscript = { version = "9.0.0", features = ["compiler"] }
lightning-invoice = { version = "0.21.0", optional = true}
lightning = { version = "0.0.113", optional = true}
# Serialization
# -------------
base64-compat = { version = "1", optional = true } # Used by cli only
base58 = { version = "0.2", optional = true } # Used by cli only
bech32 = { version = "0.9", optional = true } # Used by cli only
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", features = ["hex"], optional = true }
serde_json = { version = "1", optional = true } # Used by cli only
serde_yaml = { version = "0.9", optional = true } # Used by cli only
toml = { version = "0.5", optional = true } # Used by cli only
clap = { version = "~3.2.23", optional = true, features = ["derive"] } # Used by cli only
# Internal data representations
# -----------------------------
url = "2.2"
chrono = "0.4.19"

[features]
default = []
all = ["serde", "rgb", "bolt11"]
cli = ["clap", "base64-compat", "base58", "bech32", "serde", "serde_yaml", "serde_json", "toml"]
serde = ["serde_crate", "serde_with", "amplify/serde", "descriptor-wallet/serde",
         "bp-core/serde", "lnp-core/serde", "internet2/serde",
         "bitcoin/serde", "miniscript/serde",
         "chrono/serde", "url/serde"]
rgb = ["rgb-core", "rgb-core/serde"]
bolt11 = ["lightning-invoice", "lightning"]